--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "fastclick": "^1.0.6",
     "file-loader": "^0.9.0",
+    "friendly-errors-webpack-plugin": "^1.1.3",
     "function-bind": "^1.0.2",
     "html-webpack-plugin": "^2.8.1",
     "http-proxy-middleware": "^0.17.2",
